# extendy

./: .gitignore  CHANGES.rst  Makefile  Pipfile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
src/extendy/: __init__.py  error.py  extension.py  manager.py
test/: test_extension.py  test_manager.py
test/testpkg/: setup.py
test/testpkg/src/extendy_testpkg/: __init__.py
test/testpkg/src/extendy_testpkg/stuff/: bar.py  baz.py  foo.py
